	* app-utorrent: Class profile changed to implement pimpl idiom	
	* app-utorrent: Changed profile class to emit "sampling_file" events
	* app-utorrent: Changed profile  class to emit "sampling_folder" event
	* app-chromium: Changed to move sampling_file events to profile instead of file-xxx modules
	* app-chromium: Changed to emit sampling_folder (sampling_id, folder)
	* libmobius_core: Changed io::folder::get_children method to return std::vector
	* libmobius_core: Changed io::folder::new_file method
	* libmobius_core: Changed io::folder::new_folder method
	* libmobius_core: Changed io::folder_impl_base::get_children method to return std::vector
	* libmobius_core: Removed io::folder_impl_base::new_file method
	* libmobius_core: Removed io::folder_impl_base::new_folder method
	* libmobius_core: Changed io::folder_impl_null::get_children method to return std::vector
	* libmobius_core: Removed io::folder_impl_null::new_file method
	* libmobius_core: Removed io::folder_impl_null::new_folder method
	* libmobius_core: Changed vfs::tsk::folder_impl::get_children method to return std::vector
	* libmobius_core: Removed vfs::tsk::folder_impl::new_file method
	* libmobius_core: Removed vfs::tsk::folder_impl::new_folder method
	* libmobius_core: Added new method vfs::tsk::fs_file::get_children
	* libmobius_core: Changed vfs::tsk::folder_impl to use fs_file::get_children
	* libmobius_core: Changed vfs::tsk::folder_impl to implement cache for children
	* libmobius_core: Changed io::local::folder_impl::get_children method to return std::vector
	* libmobius_core: Removed io::local::folder_impl::new_file method
	* libmobius_core: Removed io::local::folder_impl::new_folder method
	* libmobius_core: Changed io::smb::folder_impl::get_children method to return std::vector
	* libmobius_core: Removed io::smb::folder_impl::new_file method
	* libmobius_core: Removed io::smb::folder_impl::new_folder method