@@ -36,9 +36,9 @@
 // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 //
 // - autofill: autofill entries
-//      - count: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78,
-//      80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119, 122-123,
-//      125, 127-128, 130, 132, 134-135, 141
+//      - count: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74,
+//      76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119,
+//      122-123, 125, 127-128, 130, 132, 134-135, 141
 //      - date_created: 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84,
 //      86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119, 122-123, 125,
 //      127-128, 130, 132, 134-135, 141
@@ -46,48 +46,48 @@
 //      86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119, 122-123, 125,
 //      127-128, 130, 132, 134-135, 141
 //      - guid: 83-84, 87-88, 90
-//      - name: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78,
-//      80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119, 122-123,
-//      125, 127-128, 130, 132, 134-135, 141
-//      - pair_id: 40, 43, 45, 48
-//      - value: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78,
-//      80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119, 122-123,
-//      125, 127-128, 130, 132, 134-135, 141
-//      - value_lower: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74,
+//      - name: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74,
 //      76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119,
+//      122-123, 125, 127-128, 130, 132, 134-135, 141
+//      - pair_id: 40, 43, 45, 48, 52
+//      - value: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74,
+//      76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119,
+//      122-123, 125, 127-128, 130, 132, 134-135, 141
+//      - value_lower: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72,
+//      74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119,
 //      122-123, 125, 127-128, 130, 132, 134-135, 141
 //
 // - autofill_dates: autofill entry dates
-//      - date_created: 40, 43, 45, 48
-//      - pair_id: 40, 43, 45, 48
+//      - date_created: 40, 43, 45, 48, 52
+//      - pair_id: 40, 43, 45, 48, 52
 //
 // - autofill_profiles: autofill profiles
-//      - address_line_1: 40, 43, 45, 48
-//      - address_line_2: 40, 43, 45, 48
-//      - city: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78,
-//      80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
-//      - company_name: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74,
+//      - address_line_1: 40, 43, 45, 48, 52
+//      - address_line_2: 40, 43, 45, 48, 52
+//      - city: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74,
 //      76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
-//      - country: 40, 43, 45, 48
-//      - country_code: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74,
-//      76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
-//      - date_modified: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74,
-//      76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
+//      - company_name: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72,
+//      74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
+//      - country: 40, 43, 45, 48, 52
+//      - country_code: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72,
+//      74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
+//      - date_modified: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72,
+//      74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
 //      - dependent_locality: 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78,
 //      80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
 //      - disallow_settings_visible_updates: 96-98, 100, 104, 107-113
-//      - guid: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78,
-//      80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
+//      - guid: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74,
+//      76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
 //      - is_client_validity_states_updated: 80-84, 86-88, 90-92, 96-98
 //      - label: 96-98, 100, 104, 107-113
 //      - language_code: 56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84,
 //      86-88, 90-92, 96-98, 100, 104, 107-113
-//      - origin: 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88,
-//      90-92, 96-98, 100, 104, 107-113
+//      - origin: 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84,
+//      86-88, 90-92, 96-98, 100, 104, 107-113
 //      - sorting_code: 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84,
 //      86-88, 90-92, 96-98, 100, 104, 107-113
-//      - state: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78,
-//      80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
+//      - state: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74,
+//      76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
 //      - street_address: 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84,
 //      86-88, 90-92, 96-98, 100, 104, 107-113
 //      - use_count: 61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92,
@@ -95,7 +95,7 @@
 //      - use_date: 61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98,
 //      100, 104, 107-113
 //      - validity_bitfield: 76-78, 80-84, 86-88, 90-92, 96-98
-//      - zipcode: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74,
+//      - zipcode: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74,
 //      76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
 //
 // - autofill_profile_addresses: autofill profile addresses
@@ -136,10 +136,8 @@
 //      - year: 104, 107-113
 //
 // - autofill_profile_emails: autofill profile emails
-//      - email: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78,
-//      80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
-//      - guid: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78,
-//      80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
+//      - email: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
+//      - guid: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
 //
 // - autofill_profile_names: autofill profile names
 //      - conjunction_last_name: 88, 90-92, 96-98, 100, 104, 107-113
@@ -147,42 +145,34 @@
 //      - date_of_birth: 58, 65, 80, 88, 96
 //      - first_last_name: 88, 90-92, 96-98, 100, 104, 107-113
 //      - first_last_name_status: 88, 90-92, 96-98, 100, 104, 107-113
-//      - first_name: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74,
-//      76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
+//      - first_name: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
 //      - first_name_status: 88, 90-92, 96-98, 100, 104, 107-113
-//      - full_name: 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88,
-//      90-92, 96-98, 100, 104, 107-113
+//      - full_name: 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
 //      - full_name_status: 88, 90-92, 96-98, 100, 104, 107-113
 //      - full_name_with_honorific_prefix: 92, 96-98, 100, 104, 107-113
 //      - full_name_with_honorific_prefix_status: 92, 96-98, 100, 104, 107-113
 //      - gender: 58, 65, 80, 88, 96
-//      - guid: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78,
-//      80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
+//      - guid: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
 //      - honorific_prefix: 88, 90-92, 96-98, 100, 104, 107-113
 //      - honorific_prefix_status: 88, 90-92, 96-98, 100, 104, 107-113
-//      - last_name: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74,
-//      76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
+//      - last_name: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
 //      - last_name_status: 88, 90-92, 96-98, 100, 104, 107-113
-//      - middle_name: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74,
-//      76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
+//      - middle_name: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
 //      - middle_name_status: 88, 90-92, 96-98, 100, 104, 107-113
 //      - second_last_name: 88, 90-92, 96-98, 100, 104, 107-113
 //      - second_last_name_status: 88, 90-92, 96-98, 100, 104, 107-113
 //
 // - autofill_profile_phones: autofill profile phones
-//      - guid: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78,
-//      80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
-//      - number: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78,
-//      80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
-//      - type: 40, 43, 45, 48
+//      - guid: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
+//      - number: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113
+//      - type: 40, 43, 45, 48, 52
 //
 // - autofill_profile_usernames
 //      - guid: 58, 65, 80, 88, 96
 //      - username: 58, 65, 80, 88, 96
 //
 // - autofill_profiles_trash: autofill entries in trash
-//      - guid: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78,
-//      80-84, 86-88, 90-92, 96-98
+//      - guid: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98
 //
 // - autofill_travels
 //      - date_modified: 83-84, 87-88, 90, 92, 96-98, 100, 104, 107-109,
@@ -231,38 +221,17 @@
 //      130, 132
 //
 // - credit_cards: credit card entries
-//      - billing_address_id: 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98,
-//      100, 104, 107-113, 116-117, 119, 122-123, 125, 127-128, 130, 132,
-//      134-135, 141
-//      - card_number_encrypted: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67,
-//      70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113,
-//      116-117, 119, 122-123, 125, 127-128, 130, 132, 134-135, 141
-//      - date_modified: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74,
-//      76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119,
-//      122-123, 125, 127-128, 130, 132, 134-135, 141
-//      - expiration_month: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72,
-//      74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119,
-//      122-123, 125, 127-128, 130, 132, 134-135, 141
-//      - expiration_year: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72,
-//      74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119,
-//      122-123, 125, 127-128, 130, 132, 134-135, 141
-//      - guid: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78,
-//      80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119, 122-123,
-//      125, 127-128, 130, 132, 134-135, 141
-//      - name_on_card: 40, 43, 45, 48, 55-56, 58, 60-61, 64-65, 67, 70-72, 74,
-//      76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119,
-//      122-123, 125, 127-128, 130, 132, 134-135, 141
-//      - nickname: 87-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119,
-//      122-123, 125, 127-128, 130, 132, 134-135, 141
-//      - origin: 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88,
-//      90-92, 96-98, 100, 104, 107-113, 116-117, 119, 122-123, 125, 127-128,
-//      130, 132, 134-135, 141
-//      - use_count: 61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92,
-//      96-98, 100, 104, 107-113, 116-117, 119, 122-123, 125, 127-128, 130, 132,
-//      134-135, 141
-//      - use_date: 61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98,
-//      100, 104, 107-113, 116-117, 119, 122-123, 125, 127-128, 130, 132,
-//      134-135, 141
+//      - billing_address_id: 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119, 122-123, 125, 127-128, 130, 132, 134-135, 141
+//      - card_number_encrypted: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119, 122-123, 125, 127-128, 130, 132, 134-135, 141
+//      - date_modified: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119, 122-123, 125, 127-128, 130, 132, 134-135, 141
+//      - expiration_month: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119, 122-123, 125, 127-128, 130, 132, 134-135, 141
+//      - expiration_year: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119, 122-123, 125, 127-128, 130, 132, 134-135, 141
+//      - guid: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119, 122-123, 125, 127-128, 130, 132, 134-135, 141
+//      - name_on_card: 40, 43, 45, 48, 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119, 122-123, 125, 127-128, 130, 132, 134-135, 141
+//      - nickname: 87-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119, 122-123, 125, 127-128, 130, 132, 134-135, 141
+//      - origin: 52, 55-56, 58, 60-61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119, 122-123, 125, 127-128, 130, 132, 134-135, 141
+//      - use_count: 61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119, 122-123, 125, 127-128, 130, 132, 134-135, 141
+//      - use_date: 61, 64-65, 67, 70-72, 74, 76-78, 80-84, 86-88, 90-92, 96-98, 100, 104, 107-113, 116-117, 119, 122-123, 125, 127-128, 130, 132, 134-135, 141
 //
 // - credit_card_tags
 //      - date_modified: 90, 92
@@ -377,7 +346,7 @@ static std::unordered_set<std::int64_t> UNKNOWN_SCHEMA_VERSIONS = {
     1,   2,   3,   4,   5,   6,   7,   8,   9,   10,  11,  12,  13,  14,  15,
     16,  17,  18,  19,  20,  21,  22,  23,  24,  25,  26,  27,  28,  29,  30,
     31,  32,  33,  34,  35,  36,  37,  38,  39,  41,  42,  44,  46,  47,  49,
-    50,  51,  52,  53,  54,  57,  59,  62,  63,  66,  68,  69,  73,  75,  79,
+    50,  51,  53,  54,  57,  59,  62,  63,  66,  68,  69,  73,  75,  79,
     85,  89,  93,  94,  95,  99,  101, 102, 103, 105, 106, 114, 115, 118, 120,
     121, 124, 126, 129, 131, 133, 136, 137, 138, 139, 140
 };
@@ -649,7 +618,7 @@ _get_profile_phones (
 
     // Prepare statement to retrieve phones from autofill_profile_phones table
     mobius::core::database::statement stmt = db.new_statement (generate_sql (
-        "SELECT ${type,40,48}, "
+        "SELECT ${type,40,52}, "
         "number "
         "FROM autofill_profile_phones "
         "WHERE guid = ?",
@@ -853,7 +822,7 @@ file_web_data::_load_autofill_entries (mobius::core::database::database &db)
         // Prepare statement
         mobius::core::database::statement stmt;
 
-        if (schema_version_ < 55)
+        if (schema_version_ < 53)
             stmt = db.new_statement (
                 "SELECT a.name, "
                 "a.value, "
@@ -920,15 +889,15 @@ file_web_data::_load_autofill_profiles (mobius::core::database::database &db)
             db.new_statement (generate_sql (
                 "SELECT guid, "
                 "company_name, "
-                "${address_line_1,40,48}, "
-                "${address_line_2,40,48}, "
+                "${address_line_1,40,52}, "
+                "${address_line_2,40,52}, "
                 "${street_address,55}, "
                 "${dependent_locality,55}, "
                 "city, "
                 "state, "
                 "zipcode, "
                 "country_code, "
-                "${country,40,48}, "
+                "${country,40,52}, "
                 "${date_modified,40}, "
                 "${origin,55}, "
                 "${language_code,56}, "
@@ -1029,7 +998,7 @@ file_web_data::_load_credit_cards (mobius::core::database::database &db)
                 "expiration_year, "
                 "card_number_encrypted, "
                 "${date_modified,30}, "
-                "${origin,50}, "
+                "${origin,52}, "
                 "${use_count,61}, "
                 "${use_date,61}, "
                 "${billing_address_id,66}, "
