@@ -8,6 +8,9 @@ Mobius Forensic Toolkit 2.20
 	* app-utorrent: Changed profile  class to emit "sampling_folder" event
 	* app-chromium: Changed to move sampling_file events to profile instead of file-xxx modules
 	* app-chromium: Changed to emit sampling_folder (sampling_id, folder)
+	* app-chromium: Added support for Cookies files v6
+	* app-chromium: Added support for Login Data files v3
+	* app-chromium: Added support for Web Data files v52
 	* libmobius_core: Changed io::folder::get_children method to return std::vector
 	* libmobius_core: Changed io::folder::new_file method
 	* libmobius_core: Changed io::folder::new_folder method
